Drop most of nopar in l3kernel (bar basics/expan/tl)
Other than the three 'tricky' modules this is largely a
mechanical excercise. The three outstanding modules need
more thought as the nature of the commands produces is
tricker: to be done one at a time.

There are a few edge case questions still open re.
what is an 'document' command and how they should be
set up.

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -558,7 +558,7 @@
 %     \cs_gset_nopar:Nx, \cs_gset_nopar:cx
 %   }
 %   \begin{syntax}
-%     \cs{cs_gset_nopar:Nn} \meta{function} \Arg{code}
+%     \cs{cs_git cogset_nopar:Nn} \meta{function} \Arg{code}
 %   \end{syntax}
 %   Sets \meta{function} to expand to \meta{code} as replacement text.
 %   Within the \meta{code}, the number of \meta{parameters} is detected
