--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1111,9 +1111,9 @@
 %   the csname should be turned to a control sequence within a group
 %   (see \cs{cs_show:c}).
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \cs_log:N
+\cs_new_protected:Npn \cs_log:N
   { \__msg_log_next: \cs_show:N }
-\cs_new_protected_nopar:Npn \cs_log:c
+\cs_new_protected:Npn \cs_log:c
   { \__msg_log_next: \cs_show:c }
 %    \end{macrocode}
 % \end{macro}
@@ -1121,7 +1121,7 @@
 % \begin{macro}[int]{\__kernel_register_log:N, \__kernel_register_log:c}
 %   Redirect the output of \cs{__kernel_register_show:N} to the log.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \__kernel_register_log:N
+\cs_new_protected:Npn \__kernel_register_log:N
   { \__msg_log_next: \__kernel_register_show:N }
 \cs_generate_variant:Nn \__kernel_register_log:N { c }
 %    \end{macrocode}
@@ -1782,9 +1782,9 @@
 % \begin{macro}{\clist_log:N, \clist_log:c, \clist_log:n}
 %   Redirect output of \cs{clist_show:N} to the log.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \clist_log:N
+\cs_new_protected:Npn \clist_log:N
   { \__msg_log_next: \clist_show:N }
-\cs_new_protected_nopar:Npn \clist_log:n
+\cs_new_protected:Npn \clist_log:n
   { \__msg_log_next: \clist_show:n }
 \cs_generate_variant:Nn \clist_log:N { c }
 %    \end{macrocode}
@@ -2050,7 +2050,7 @@
 %   that for the corners. However, there is only one value needed here and
 %   a fixed input property list, so things are a bit clearer.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_find_bounding_shift:
+\cs_new_protected:Npn \@@_find_bounding_shift:
   {
     \dim_set:Nn \l_@@_bounding_shift_dim { \c_max_dim }
     \prop_map_inline:Nn \l_@@_bounding_prop
@@ -2255,7 +2255,7 @@
 % \begin{macro}{\coffin_log_structure:N, \coffin_log_structure:c}
 %   Redirect output of \cs{coffin_show_structure:N} to the log.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \coffin_log_structure:N
+\cs_new_protected:Npn \coffin_log_structure:N
   { \__msg_log_next: \coffin_show_structure:N }
 \cs_generate_variant:Nn \coffin_log_structure:N { c }
 %    \end{macrocode}
@@ -2308,9 +2308,9 @@
 %   Usual map breaking functions.  Those are not yet in \pkg{l3kernel}
 %   proper since the mapping below is the first of its kind.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \ior_map_break:
+\cs_new:Npn \ior_map_break:
   { \__prg_map_break:Nn \ior_map_break: { } }
-\cs_new_nopar:Npn \ior_map_break:n
+\cs_new:Npn \ior_map_break:n
   { \__prg_map_break:Nn \ior_map_break: }
 %    \end{macrocode}
 % \end{macro}
@@ -2326,11 +2326,11 @@
 %   This mapping cannot be nested as the stream has only one \enquote{current
 %   line}.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ior_map_inline:Nn
+\cs_new_protected:Npn \ior_map_inline:Nn
   { \@@_map_inline:NNn \ior_get:NN }
-\cs_new_protected_nopar:Npn \ior_str_map_inline:Nn
+\cs_new_protected:Npn \ior_str_map_inline:Nn
   { \@@_map_inline:NNn \ior_get_str:NN }
-\cs_new_protected_nopar:Npn \@@_map_inline:NNn
+\cs_new_protected:Npn \@@_map_inline:NNn
   {
     \int_gincr:N \g__prg_map_int
     \exp_args:Nc \@@_map_inline:NNNn
@@ -2363,7 +2363,7 @@
 % \begin{macro}{\ior_log_streams:}
 %   Redirect output of \cs{ior_list_streams:} to the log.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ior_log_streams:
+\cs_new_protected:Npn \ior_log_streams:
   { \__msg_log_next: \ior_list_streams: }
 %    \end{macrocode}
 % \end{macro}
@@ -2375,7 +2375,7 @@
 % \begin{macro}{\iow_log_streams:}
 %   Redirect output of \cs{iow_list_streams:} to the log.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \iow_log_streams:
+\cs_new_protected:Npn \iow_log_streams:
   { \__msg_log_next: \iow_list_streams: }
 %    \end{macrocode}
 % \end{macro}
@@ -2389,9 +2389,9 @@
 % \begin{macro}{\fp_log:N, \fp_log:c, \fp_log:n}
 %   Redirect output of \cs{fp_show:N} to the log.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \fp_log:N
+\cs_new_protected:Npn \fp_log:N
   { \__msg_log_next: \fp_show:N }
-\cs_new_protected_nopar:Npn \fp_log:n
+\cs_new_protected:Npn \fp_log:n
   { \__msg_log_next: \fp_show:n }
 \cs_generate_variant:Nn \fp_log:N { c }
 %    \end{macrocode}
@@ -2405,7 +2405,7 @@
 %   involving \tn{currentgrouplevel} and \tn{currentgrouptype}.  See
 %   \cs{int_show:N} for details.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \int_log:N
+\cs_new_protected:Npn \int_log:N
   { \__msg_log_next: \int_show:N }
 \cs_generate_variant:Nn \int_log:N { c }
 %    \end{macrocode}
@@ -2414,7 +2414,7 @@
 % \begin{macro}{\int_log:n}
 %   Redirect output of \cs{int_show:n} to the log.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \int_log:n
+\cs_new_protected:Npn \int_log:n
   { \__msg_log_next: \int_show:n }
 %    \end{macrocode}
 % \end{macro}
@@ -2428,7 +2428,7 @@
 % \begin{macro}{\keys_log:nn}
 %   Redirect output of \cs{keys_show:nn} to the log.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \keys_log:nn
+\cs_new_protected:Npn \keys_log:nn
   { \__msg_log_next: \keys_show:nn }
 %    \end{macrocode}
 % \end{macro}
@@ -2556,9 +2556,9 @@
 % \begin{macro}{\bool_log:N, \bool_log:c, \bool_log:n}
 %   Redirect output of \cs{bool_show:N} to the log.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \bool_log:N
+\cs_new_protected:Npn \bool_log:N
   { \__msg_log_next: \bool_show:N }
-\cs_new_protected_nopar:Npn \bool_log:n
+\cs_new_protected:Npn \bool_log:n
   { \__msg_log_next: \bool_show:n }
 \cs_generate_variant:Nn \bool_log:N { c }
 %    \end{macrocode}
@@ -2602,7 +2602,7 @@
 % \begin{macro}{\prop_log:N, \prop_log:c}
 %   Redirect output of \cs{prop_show:N} to the log.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \prop_log:N
+\cs_new_protected:Npn \prop_log:N
   { \__msg_log_next: \prop_show:N }
 \cs_generate_variant:Nn \prop_log:N { c }
 %    \end{macrocode}
@@ -2672,9 +2672,9 @@
 %   \cs{@@_item:n} without expansion in the input stream,
 %   hence in the \texttt{x}-expanding assignment.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \seq_set_filter:NNn
+\cs_new_protected:Npn \seq_set_filter:NNn
   { \@@_set_filter:NNNn \tl_set:Nx }
-\cs_new_protected_nopar:Npn \seq_gset_filter:NNn
+\cs_new_protected:Npn \seq_gset_filter:NNn
   { \@@_set_filter:NNNn \tl_gset:Nx }
 \cs_new_protected:Npn \@@_set_filter:NNNn #1#2#3#4
   {
@@ -2692,9 +2692,9 @@
 %   merge the two within a single function, but it would have weird
 %   semantics.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \seq_set_map:NNn
+\cs_new_protected:Npn \seq_set_map:NNn
   { \@@_set_map:NNNn \tl_set:Nx }
-\cs_new_protected_nopar:Npn \seq_gset_map:NNn
+\cs_new_protected:Npn \seq_gset_map:NNn
   { \@@_set_map:NNNn \tl_gset:Nx }
 \cs_new_protected:Npn \@@_set_map:NNNn #1#2#3#4
   {
@@ -2709,7 +2709,7 @@
 % \begin{macro}{\seq_log:N, \seq_log:c}
 %   Redirect output of \cs{seq_show:N} to the log.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \seq_log:N
+\cs_new_protected:Npn \seq_log:N
   { \__msg_log_next: \seq_show:N }
 \cs_generate_variant:Nn \seq_log:N { c }
 %    \end{macrocode}
@@ -2750,7 +2750,7 @@
 %    \begin{macrocode}
 \cs_new_eq:NN \dim_log:N \__kernel_register_log:N
 \cs_new_eq:NN \dim_log:c \__kernel_register_log:c
-\cs_new_protected_nopar:Npn \dim_log:n
+\cs_new_protected:Npn \dim_log:n
   { \__msg_log_next: \dim_show:n }
 %    \end{macrocode}
 % \end{macro}
@@ -2760,7 +2760,7 @@
 %    \begin{macrocode}
 \cs_new_eq:NN \skip_log:N \__kernel_register_log:N
 \cs_new_eq:NN \skip_log:c \__kernel_register_log:c
-\cs_new_protected_nopar:Npn \skip_log:n
+\cs_new_protected:Npn \skip_log:n
   { \__msg_log_next: \skip_show:n }
 %    \end{macrocode}
 % \end{macro}
@@ -2770,7 +2770,7 @@
 %    \begin{macrocode}
 \cs_new_eq:NN \muskip_log:N \__kernel_register_log:N
 \cs_new_eq:NN \muskip_log:c \__kernel_register_log:c
-\cs_new_protected_nopar:Npn \muskip_log:n
+\cs_new_protected:Npn \muskip_log:n
   { \__msg_log_next: \muskip_show:n }
 %    \end{macrocode}
 % \end{macro}
@@ -2885,9 +2885,9 @@
 %   This plus \cs{exp_not:N} allows the primitive to be used to carry out
 %   a set operation.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \tl_set_from_file:Nnn
+\cs_new_protected:Npn \tl_set_from_file:Nnn
   { \@@_set_from_file:NNnn \tl_set:Nn }
-\cs_new_protected_nopar:Npn \tl_gset_from_file:Nnn
+\cs_new_protected:Npn \tl_gset_from_file:Nnn
   { \@@_set_from_file:NNnn \tl_gset:Nn }
 \cs_generate_variant:Nn \tl_set_from_file:Nnn  { c }
 \cs_generate_variant:Nn \tl_gset_from_file:Nnn { c }
@@ -2927,9 +2927,9 @@
 %   Once the business is done using some scratch space, the tokens can be
 %   transferred to the real target.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \tl_set_from_file_x:Nnn
+\cs_new_protected:Npn \tl_set_from_file_x:Nnn
   { \@@_set_from_file_x:NNnn \tl_set:Nn }
-\cs_new_protected_nopar:Npn \tl_gset_from_file_x:Nnn
+\cs_new_protected:Npn \tl_gset_from_file_x:Nnn
   { \@@_set_from_file_x:NNnn \tl_gset:Nn }
 \cs_generate_variant:Nn \tl_set_from_file_x:Nnn  { c }
 \cs_generate_variant:Nn \tl_gset_from_file_x:Nnn { c }
@@ -2971,12 +2971,12 @@
 %   done without an internal, but this way the logic is slightly clearer as
 %   everything essentially follows the same path.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \tl_lower_case:n { \@@_change_case:nnn { lower } { } }
-\cs_new_nopar:Npn \tl_upper_case:n { \@@_change_case:nnn { upper } { } }
-\cs_new_nopar:Npn \tl_mixed_case:n { \@@_mixed_case:nn { } }
-\cs_new_nopar:Npn \tl_lower_case:nn { \@@_change_case:nnn { lower } }
-\cs_new_nopar:Npn \tl_upper_case:nn { \@@_change_case:nnn { upper } }
-\cs_new_nopar:Npn \tl_mixed_case:nn { \@@_mixed_case:nn }
+\cs_new:Npn \tl_lower_case:n { \@@_change_case:nnn { lower } { } }
+\cs_new:Npn \tl_upper_case:n { \@@_change_case:nnn { upper } { } }
+\cs_new:Npn \tl_mixed_case:n { \@@_mixed_case:nn { } }
+\cs_new:Npn \tl_lower_case:nn { \@@_change_case:nnn { lower } }
+\cs_new:Npn \tl_upper_case:nn { \@@_change_case:nnn { upper } }
+\cs_new:Npn \tl_mixed_case:nn { \@@_mixed_case:nn }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -4386,7 +4386,7 @@
 % \begin{macro}{\tl_log:N, \tl_log:c}
 %   Redirect output of \cs{tl_show:N} to the log.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \tl_log:N
+\cs_new_protected:Npn \tl_log:N
   { \__msg_log_next: \tl_show:N }
 \cs_generate_variant:Nn \tl_log:N { c }
 %    \end{macrocode}
@@ -4395,7 +4395,7 @@
 % \begin{macro}{\tl_log:n}
 %   Redirect output of \cs{tl_show:n} to the log.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \tl_log:n
+\cs_new_protected:Npn \tl_log:n
   { \__msg_log_next: \tl_show:n }
 %    \end{macrocode}
 % \end{macro}
@@ -4435,7 +4435,7 @@
 \group_begin:
   \cs_set_protected:Npn \@@_tmp:w #1 \q_stop
     {
-      \cs_new_protected_nopar:Npn \@@_execute_branches_N_type:
+      \cs_new_protected:Npn \@@_execute_branches_N_type:
         {
           \if_int_odd:w
               \if_catcode:w \exp_not:N \l_peek_token {   \c_two \fi:
@@ -4464,11 +4464,11 @@
       { \@@_true:w }
       { \tl_if_empty:nTF {#2} { \@@_true:w } { \@@_false:w } }
   }
-\cs_new_protected_nopar:Npn \peek_N_type:TF
+\cs_new_protected:Npn \peek_N_type:TF
   { \@@_token_generic:NNTF \@@_execute_branches_N_type: \scan_stop: }
-\cs_new_protected_nopar:Npn \peek_N_type:T
+\cs_new_protected:Npn \peek_N_type:T
   { \@@_token_generic:NNT \@@_execute_branches_N_type: \scan_stop: }
-\cs_new_protected_nopar:Npn \peek_N_type:F
+\cs_new_protected:Npn \peek_N_type:F
   { \@@_token_generic:NNF \@@_execute_branches_N_type: \scan_stop: }
 %    \end{macrocode}
 % \end{macro}
