--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -616,7 +616,7 @@
     \@@_if_exist:NT #1
       {
         \hbox_set:Nw #1 \color_group_begin: \color_ensure_current:
-          \cs_set_protected_nopar:Npn \hcoffin_set_end:
+          \cs_set_protected:Npn \hcoffin_set_end:
             {
                 \color_group_end:
               \hbox_set_end:
@@ -626,7 +626,7 @@
             }
       }
   }
-\cs_new_protected_nopar:Npn \hcoffin_set_end: { }
+\cs_new_protected:Npn \hcoffin_set_end: { }
 \cs_generate_variant:Nn \hcoffin_set:Nw { c }
 %    \end{macrocode}
 %
@@ -669,7 +669,7 @@
             }
       }
   }
-\cs_new_protected_nopar:Npn \vcoffin_set_end: { }
+\cs_new_protected:Npn \vcoffin_set_end: { }
 \cs_generate_variant:Nn \vcoffin_set:Nnw { c }
 %    \end{macrocode}
 % \end{macro}
