--- a/l3kernel/l3color.dtx
+++ b/l3kernel/l3color.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3color.dtx Copyright(C) 2011,2012,2014 The LaTeX3 Project
+%% File: l3color.dtx Copyright(C) 2011,2012,2014,2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -114,7 +114,7 @@
 %   needs a \tn{par}, which in horizontal mode does nothing.
 %    \begin{macrocode}
 \cs_new_eq:NN \color_group_begin: \group_begin:
-\cs_new_protected_nopar:Npn \color_group_end:
+\cs_new_protected:Npn \color_group_end:
   {
       \tex_par:D
     \group_end:
@@ -127,7 +127,7 @@
 %   current color \enquote{now}.
 %    \begin{macrocode}
 %<*initex>
-\cs_new_protected_nopar:Npn \color_ensure_current:
+\cs_new_protected:Npn \color_ensure_current:
   { \__driver_color_ensure_current: }
 %</initex>
 %    \end{macrocode}
@@ -136,18 +136,18 @@
 %   then color is not in use and this function can be a no-op.
 %    \begin{macrocode}
 %<*package>
-\cs_new_protected_nopar:Npn \color_ensure_current: { }
+\cs_new_protected:Npn \color_ensure_current: { }
 \AtBeginDocument
   {
     \cs_if_exist:NTF \__driver_color_ensure_current:
       {
-        \cs_set_protected_nopar:Npn \color_ensure_current:
+        \cs_set_protected:Npn \color_ensure_current:
           { \__driver_color_ensure_current: }
       }
       {
         \cs_if_exist:NT \set@color
           {
-            \cs_set_protected_nopar:Npn \color_ensure_current:
+            \cs_set_protected:Npn \color_ensure_current:
               { \set@color }
           }
       }
