--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -1141,7 +1141,7 @@ Do not distribute a modified version of this file.
 %   A few more letters are \enquote{private} in a \LaTeX3 programming
 %   environment.
 %    \begin{macrocode}
-\cs_gset_nopar:Npn \MakePrivateLetters
+\cs_gset:Npn \MakePrivateLetters
   {
     \char_set_catcode_letter:N \@
     \char_set_catcode_letter:N \_
@@ -1193,7 +1193,7 @@ Do not distribute a modified version of this file.
 %   Customise lists.
 %    \begin{macrocode}
 \cs_new_eq:NN \@@_oldlist:nn \list
-\cs_gset_nopar:Npn \list #1 #2
+\cs_gset:Npn \list #1 #2
   { \@@_oldlist:nn {#1} { #2 \dim_zero:N \listparindent } }
 \setlength \parindent  { 2em }
 \setlength \itemindent { 0pt }
@@ -1214,7 +1214,7 @@ Do not distribute a modified version of this file.
 %   Different design and/or structure is called for).
 %    \begin{macrocode}
 \@addtoreset{section}{part}
-\cs_gset_nopar:Npn \l@section #1#2
+\cs_gset:Npn \l@section #1#2
   {
     \ifnum \c@tocdepth >\z@
       \addpenalty\@secpenalty
@@ -1230,7 +1230,7 @@ Do not distribute a modified version of this file.
       \endgroup
     \fi
   }
-\cs_gset_nopar:Npn \l@subsection
+\cs_gset:Npn \l@subsection
   { \@dottedtocline{2}{2.5em}{2.3em} }  % #2 = 1.5em
 %    \end{macrocode}
 % \end{macro}
@@ -1641,7 +1641,7 @@ Do not distribute a modified version of this file.
     \@@_function_typeset:
     \@@_function_descr_start:w
   }
-\cs_new_protected_nopar:Npn \@@_function_end:
+\cs_new_protected:Npn \@@_function_end:
   {
     \@@_function_descr_stop:
     \@@_function_assemble:
@@ -1658,12 +1658,12 @@ Do not distribute a modified version of this file.
 %   scene.  Further code typesets a coffin, so we end the paragraph and
 %   allow a page break.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_function_typeset_start:
+\cs_new_protected:Npn \@@_function_typeset_start:
   {
     \par \bigskip \noindent
     \phantomsection
   }
-\cs_new_protected_nopar:Npn \@@_function_typeset_stop:
+\cs_new_protected:Npn \@@_function_typeset_stop:
   {
     \par
     \allowbreak
@@ -1689,7 +1689,7 @@ Do not distribute a modified version of this file.
       \bool_set_false:N \l_@@_macro_rEXP_bool
       \bool_set_false:N \l_@@_no_label_bool
       \char_set_catcode_active:N \<
-      \cs_set_protected_nopar:Npn < ##1 > { \meta {##1} }
+      \cs_set_protected:Npn < ##1 > { \meta {##1} }
   }
 \group_end:
 %    \end{macrocode}
@@ -1725,7 +1725,7 @@ Do not distribute a modified version of this file.
 %   Otherwise, we have a regular control sequence, which we decompose
 %   using \cs{@@_function_parse_cs_aux:nnN}.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_function_parse:
+\cs_new_protected:Npn \@@_function_parse:
   {
     \seq_map_function:NN
       \l_@@_function_input_seq
@@ -1772,7 +1772,7 @@ Do not distribute a modified version of this file.
 %   larger than the available width in the margin.  The function
 %   \cs{@@_typeset_names:} is quite involved hence given later.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_function_typeset:
+\cs_new_protected:Npn \@@_function_typeset:
   {
     \dim_zero:N \l_@@_trial_width_dim
     \hcoffin_set:Nn \l_@@_names_coffin { \@@_typeset_names: }
@@ -1792,12 +1792,12 @@ Do not distribute a modified version of this file.
 %   \env{function} environment.  This is closed by \cs{@@_function_end:}
 %   (the end of a \env{function} environment).
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_function_descr_start:w
+\cs_new_protected:Npn \@@_function_descr_start:w
   {
     \vcoffin_set:Nnw \l_@@_descr_coffin { \textwidth }
       \noindent \ignorespaces
   }
-\cs_new_protected_nopar:Npn \@@_function_descr_stop:
+\cs_new_protected:Npn \@@_function_descr_stop:
   { \vcoffin_set_end: }
 %    \end{macrocode}
 % \end{macro}
@@ -1809,7 +1809,7 @@ Do not distribute a modified version of this file.
 %   coffin.  The relative positions depend on whether the names coffin
 %   fits in the margin.  Then typeset the combination.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_function_assemble:
+\cs_new_protected:Npn \@@_function_assemble:
   {
     \hcoffin_set:Nn  \l_@@_syntax_coffin
       { \box_use:N \g_@@_syntax_box }
@@ -1860,7 +1860,7 @@ Do not distribute a modified version of this file.
 %   last |\\| and the rule to be expandable, making our lives a bit
 %   complicated.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_typeset_names:
+\cs_new_protected:Npn \@@_typeset_names:
   {
     \small\ttfamily
     \begin{tabular} { @{} l @{} r @{} }
@@ -1899,7 +1899,7 @@ Do not distribute a modified version of this file.
 %
 %   Braces around |##1| are crucial since this item can be empty.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_typeset_functions:
+\cs_new_protected:Npn \@@_typeset_functions:
   {
     \prop_map_function:NN \l_@@_functions_block_prop
       \@@_typeset_functions_auxi:nn
@@ -1989,7 +1989,7 @@ Do not distribute a modified version of this file.
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_typeset_expandability:
+\cs_new_protected:Npn \@@_typeset_expandability:
   {
     &
     \bool_if:NT \l_@@_macro_EXP_bool
@@ -2050,7 +2050,7 @@ Do not distribute a modified version of this file.
 %   This function must be expandable since it produces rules for use in
 %   alignments.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \@@_typeset_dates:
+\cs_new:Npn \@@_typeset_dates:
   {
     \bool_if:nF
       {
@@ -2174,7 +2174,7 @@ Do not distribute a modified version of this file.
 %   \cs{l_@@_nested_macro_int} counts the number of \env{macro}
 %   environments around the current point (is $0$ outside).
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_macro_init:
+\cs_new_protected:Npn \@@_macro_init:
   {
     \int_incr:N \l_@@_nested_macro_int
     \bool_set_false:N \l_@@_macro_aux_bool
@@ -2223,7 +2223,7 @@ Do not distribute a modified version of this file.
 % \begin{macro}[aux]{\@@_macro_typeset:}
 %   This calls |\makelabel{}|
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_macro_typeset:
+\cs_new_protected:Npn \@@_macro_typeset:
   {
     \topsep\MacroTopsep
     \trivlist
@@ -2327,7 +2327,7 @@ Do not distribute a modified version of this file.
     \bool_if:NTF \l_@@_macro_aux_bool
       { \@@_typeset_aux:n {#1} } {#1}
   }
-\cs_new_protected_nopar:Npn \@@_macroname_suffix:
+\cs_new_protected:Npn \@@_macroname_suffix:
   { \bool_if:NTF \l_@@_macro_TF_bool { \@@_typeset_TF: } { } }
 %    \end{macrocode}
 % \end{macro}
@@ -2450,7 +2450,7 @@ Do not distribute a modified version of this file.
 %   auxiliary nor a variable (and it does not have a test), then add it
 %   to the sequence of non-tested macros.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_macro_end_check_tested:
+\cs_new_protected:Npn \@@_macro_end_check_tested:
   {
     \bool_if:nT
      {
@@ -2510,7 +2510,7 @@ Do not distribute a modified version of this file.
           }
       }
   }
-\cs_new_protected_nopar:Npn \@@_print_end_definition:
+\cs_new_protected:Npn \@@_print_end_definition:
   {
     \group_begin:
     \@@_macro_end_wrap_items:N \l_@@_macro_input_seq
@@ -2524,7 +2524,7 @@ Do not distribute a modified version of this file.
       { \seq_item:Nn \l_@@_macro_input_seq {1}\,~and~others. }
     \group_end:
   }
-\cs_new_protected_nopar:Npn \@@_print_documented:
+\cs_new_protected:Npn \@@_print_documented:
   {
     \bool_if:nT
       {
@@ -2553,7 +2553,7 @@ Do not distribute a modified version of this file.
 %   Used by \cs{@@_macro_single:n} and in the \env{function} environment
 %   to typeset conditionals and auxiliary functions.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_typeset_TF:
+\cs_new_protected:Npn \@@_typeset_TF:
   {
     \hyperlink{explTF}
       {
@@ -2665,7 +2665,7 @@ Do not distribute a modified version of this file.
 %   The actual character from the font |manfnt|:
 %    \begin{macrocode}
 \font \manual = manfnt \scan_stop:
-\cs_gset_nopar:Npn \dbend { {\manual\char127} }
+\cs_gset:Npn \dbend { {\manual\char127} }
 %    \end{macrocode}
 %
 % Defines the single danger bend. Use it whenever there is a feature in
@@ -2676,7 +2676,7 @@ Do not distribute a modified version of this file.
   {
     \begin{trivlist}\item[]\noindent
     \begingroup\hangindent=2pc\hangafter=-2
-    \cs_set_nopar:Npn \par{\endgraf\endgroup}
+    \cs_set:Npn \par{\endgraf\endgroup}
     \hbox to0pt{\hskip-\hangindent\dbend\hfill}\ignorespaces
   }
   {
@@ -2694,7 +2694,7 @@ Do not distribute a modified version of this file.
   {
     \begin{trivlist}\item[]\noindent
     \begingroup\hangindent=3.5pc\hangafter=-2
-    \cs_set_nopar:Npn \par{\endgraf\endgroup}
+    \cs_set:Npn \par{\endgraf\endgroup}
     \hbox to0pt{\hskip-\hangindent\dbend\kern2pt\dbend\hfill}\ignorespaces
   }{
       \par\end{trivlist}
@@ -2851,8 +2851,8 @@ Do not distribute a modified version of this file.
     \relax\clearpage
     \docincludeaux
     \IfFileExists{#1.fdd}
-      { \cs_set_nopar:Npn \currentfile{#1.fdd} }
-      { \cs_set_nopar:Npn \currentfile{#1.dtx} }
+      { \cs_set:Npn \currentfile{#1.fdd} }
+      { \cs_set:Npn \currentfile{#1.dtx} }
     \int_compare:nNnTF \@auxout = \@partaux
       { \@latexerr{\string\include\space cannot~be~nested}\@eha }
       { \@docinclude #1 }
@@ -2867,7 +2867,7 @@ Do not distribute a modified version of this file.
     \@tempswatrue
     \if@partsw
       \@tempswafalse
-      \cs_set_nopar:Npx \@tempb{#1}
+      \cs_set:Npx \@tempb{#1}
       \@for\@tempa:=\@partlist\do
         {
           \ifx\@tempa\@tempb\@tempswatrue\fi
@@ -2886,7 +2886,7 @@ Do not distribute a modified version of this file.
       \part{\currentfile}
       {
         \cs_set_eq:NN \ttfamily\relax
-        \cs_gset_nopar:Npx \filekey
+        \cs_gset:Npx \filekey
           { \filekey, \thepart = { \ttfamily \currentfile } }
       }
       \DocInput{\currentfile}
@@ -2919,14 +2919,14 @@ Do not distribute a modified version of this file.
 %
 % \begin{macro}{\docincludeaux}
 %    \begin{macrocode}
-\cs_gset_nopar:Npn \docincludeaux
+\cs_gset:Npn \docincludeaux
   {
     \tl_set:Nn \thepart { \alphalph { part } }
     \tl_set:Nn \filesep { \thepart - }
     \cs_set_eq:NN \filekey \use_none:n
     \tl_gput_right:Nn \index@prologue
       {
-        \cs_gset_nopar:Npn \@oddfoot
+        \cs_gset:Npn \@oddfoot
           {
             \parbox { \textwidth }
               {
@@ -2937,7 +2937,7 @@ Do not distribute a modified version of this file.
         \cs_set_eq:NN \@evenfoot \@oddfoot
       }
     \cs_gset_eq:NN \docincludeaux \relax
-    \cs_gset_nopar:Npn \@oddfoot
+    \cs_gset:Npn \@oddfoot
       {
         \cs_if_exist:cTF { ver @ \currentfile }
           { File~\thepart :~{\ttfamily\currentfile}~ }
@@ -3035,7 +3035,7 @@ Do not distribute a modified version of this file.
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_show_functions_defined:
+\cs_new_protected:Npn \@@_show_functions_defined:
   {
     \bool_if:nT
       { \g_@@_typeset_implementation_bool && \g_@@_checkfunc_bool }
@@ -3108,7 +3108,7 @@ Do not distribute a modified version of this file.
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_show_not_tested:
+\cs_new_protected:Npn \@@_show_not_tested:
   {
     \bool_if:NT \g_@@_checktest_bool
       {
@@ -3382,12 +3382,12 @@ Do not distribute a modified version of this file.
           }
       }
   }
-\cs_new_protected_nopar:Npn \@@_key_pop:
+\cs_new_protected:Npn \@@_key_pop:
   {
     \tl_set:Nx \l_@@_index_key_tl
       { \tl_tail:N \l_@@_index_key_tl }
   }
-\cs_new_protected_nopar:Npn \@@_key_expl:
+\cs_new_protected:Npn \@@_key_expl:
   {
     \tl_if_head_eq_charcode:oNTF { \l_@@_index_key_tl } .
       { \@@_key_pop: }
@@ -3418,7 +3418,7 @@ Do not distribute a modified version of this file.
 %   removing anything after |:| or |_|, taking care of not expanding the
 %   rest for cases such as |\cs{\meta{name}:\meta{signature}}|.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_key_get_module:
+\cs_new_protected:Npn \@@_key_get_module:
   {
     \tl_set_eq:NN \l_@@_index_module_tl \l_@@_index_key_tl
     \exp_args:No \@@_key_get_module_aux:n { \token_to_str:N : }
