--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -887,7 +887,7 @@
 %   (we capture it \cs{AtBeginDocument} into
 %   \cs{g_@@_record_seq}), turning each file name into a string.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \file_list:
+\cs_new_protected:Npn \file_list:
   {
     \seq_set_eq:NN \l_@@_internal_seq \g_@@_record_seq
 %<*package>
@@ -1058,7 +1058,7 @@
 %   being \tn{outer}.
 %    \begin{macrocode}
 %<*package>
-\exp_args:NNf \cs_new_protected_nopar:Npn \@@_new:N
+\exp_args:NNf \cs_new_protected:Npn \@@_new:N
   { \exp_args:NNc \exp_after:wN \exp_stop_f: { newread } }
 %</package>
 %    \end{macrocode}
@@ -1133,7 +1133,7 @@
 %   translating |ior|/|iow| to English.  The list of streams is
 %   formatted using \cs{__msg_show_item_unbraced:nn}.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \ior_list_streams:
+\cs_new_protected:Npn \ior_list_streams:
   { \@@_list_streams:Nn \g_@@_streams_prop { ior } }
 \cs_new_protected:Npn \@@_list_streams:Nn #1#2
   {
@@ -1298,7 +1298,7 @@
 %   that it is not \tn{outer}.
 %    \begin{macrocode}
 %<*package>
-\exp_args:NNf \cs_new_protected_nopar:Npn \@@_new:N
+\exp_args:NNf \cs_new_protected:Npn \@@_new:N
   { \exp_args:NNc \exp_after:wN \exp_stop_f: { newwrite } }
 %</package>
 %    \end{macrocode}
@@ -1366,7 +1366,7 @@
 % \begin{macro}{\@@_list_streams:Nn}
 %   Done as for input, but with a copy of the auxiliary so the name is correct.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \iow_list_streams:
+\cs_new_protected:Npn \iow_list_streams:
   { \@@_list_streams:Nn \g_@@_streams_prop { iow } }
 \cs_new_eq:NN \@@_list_streams:Nn \__ior_list_streams:Nn
 %    \end{macrocode}
@@ -1443,10 +1443,10 @@
 % \begin{macro}{\iow_term:n, \iow_term:x}
 %   Writing to the log and the terminal directly are relatively easy.
 %    \begin{macrocode}
-\cs_set_protected_nopar:Npn \iow_log:x  { \iow_now:Nx \c_log_iow  }
-\cs_new_protected_nopar:Npn \iow_log:n  { \iow_now:Nn \c_log_iow  }
-\cs_set_protected_nopar:Npn \iow_term:x { \iow_now:Nx \c_term_iow }
-\cs_new_protected_nopar:Npn \iow_term:n { \iow_now:Nn \c_term_iow }
+\cs_set_protected:Npn \iow_log:x  { \iow_now:Nx \c_log_iow  }
+\cs_new_protected:Npn \iow_log:n  { \iow_now:Nn \c_log_iow  }
+\cs_set_protected:Npn \iow_term:x { \iow_now:Nx \c_term_iow }
+\cs_new_protected:Npn \iow_term:n { \iow_now:Nn \c_term_iow }
 %    \end{macrocode}
 %\end{macro}
 %\end{macro}
@@ -1457,7 +1457,7 @@
 %   Global variable holding the character that forces a new line when
 %   something is written to an output stream.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \iow_newline: { ^^J }
+\cs_new:Npn \iow_newline: { ^^J }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1612,7 +1612,7 @@
     \__msg_kernel_expandable_error:nn { kernel } { indent-outside-wrapping-code }
     #1
   }
-\cs_new_protected_nopar:Npn \iow_indent:n { \@@_indent_error:n }
+\cs_new_protected:Npn \iow_indent:n { \@@_indent_error:n }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1639,11 +1639,11 @@
   {
     \group_begin:
       \int_set_eq:NN \tex_escapechar:D \c_minus_one
-      \cs_set_nopar:Npx \{ { \token_to_str:N \{ }
-      \cs_set_nopar:Npx \# { \token_to_str:N \# }
-      \cs_set_nopar:Npx \} { \token_to_str:N \} }
-      \cs_set_nopar:Npx \% { \token_to_str:N \% }
-      \cs_set_nopar:Npx \~ { \token_to_str:N \~ }
+      \cs_set:Npx \{ { \token_to_str:N \{ }
+      \cs_set:Npx \# { \token_to_str:N \# }
+      \cs_set:Npx \} { \token_to_str:N \} }
+      \cs_set:Npx \% { \token_to_str:N \% }
+      \cs_set:Npx \~ { \token_to_str:N \~ }
       \int_set:Nn \tex_escapechar:D { 92 }
       \cs_set_eq:NN \\ \c_@@_wrap_newline_marker_tl
       \cs_set_eq:NN \  \c_catcode_other_space_tl
@@ -1719,11 +1719,11 @@
 %   be replaced once the string module is finalised with something a little
 %   cleaner.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_wrap_set_target:
+\cs_new_protected:Npn \@@_wrap_set_target:
   {
-    \cs_set_protected_nopar:Npn \@@_wrap_set_target:
+    \cs_set_protected:Npn \@@_wrap_set_target:
       {
-        \cs_set_protected_nopar:Npn \@@_wrap_set_target: { }
+        \cs_set_protected:Npn \@@_wrap_set_target: { }
         \tl_replace_all:Nnn \l_@@_newline_tl { ~ } { \c_space_tl }
         \int_set:Nn \l_@@_target_count_int
           { \l_iow_line_count_int - \tl_count:N \l_@@_newline_tl + \c_one }
@@ -1756,7 +1756,7 @@
 %   Otherwise, the current line is added to the result, with the run-on text.
 %   The current word (and its character count) are then put in the new line.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \@@_wrap_word:
+\cs_new_protected:Npn \@@_wrap_word:
   {
     \int_set:Nn \l_@@_current_word_int
       { \exp_args:No  \str_count_ignore_spaces:n \l_@@_current_word_tl }
@@ -1766,7 +1766,7 @@
       { \@@_wrap_word_newline: }
     \@@_wrap_loop:w
   }
-\cs_new_protected_nopar:Npn \@@_wrap_word_fits:
+\cs_new_protected:Npn \@@_wrap_word_fits:
   {
     \bool_if:NTF \l_@@_line_start_bool
       {
@@ -1782,7 +1782,7 @@
         \int_incr:N \l_@@_current_line_int
       }
   }
-\cs_new_protected_nopar:Npn \@@_wrap_word_newline:
+\cs_new_protected:Npn \@@_wrap_word_newline:
   {
     \@@_wrap_set_target:
     \tl_put_right:Nx \l_@@_wrap_tl
@@ -1826,7 +1826,7 @@
       { \@@_wrap_special:w }
       { \@@_wrap_loop:w #2 ~ #3 ~ }
   }
-\cs_new_protected_nopar:Npn \@@_wrap_newline:
+\cs_new_protected:Npn \@@_wrap_newline:
   {
     \@@_wrap_set_target:
     \tl_put_right:Nx \l_@@_wrap_tl
@@ -1835,19 +1835,19 @@
     \tl_clear:N \l_@@_current_line_tl
     \bool_set_true:N \l_@@_line_start_bool
   }
-\cs_new_protected_nopar:Npx \@@_wrap_indent:
+\cs_new_protected:Npx \@@_wrap_indent:
   {
     \int_add:Nn \l_@@_current_indentation_int \c_four
     \tl_put_right:Nx \exp_not:N \l_@@_current_indentation_tl
       { \c_space_tl \c_space_tl \c_space_tl \c_space_tl }
   }
-\cs_new_protected_nopar:Npn \@@_wrap_unindent:
+\cs_new_protected:Npn \@@_wrap_unindent:
   {
     \int_sub:Nn \l_@@_current_indentation_int \c_four
     \tl_set:Nx \l_@@_current_indentation_tl
       { \prg_replicate:nn \l_@@_current_indentation_int { ~ } }
   }
-\cs_new_protected_nopar:Npn \@@_wrap_end:
+\cs_new_protected:Npn \@@_wrap_end:
   {
     \tl_put_right:Nx \l_@@_wrap_tl
       { \l_@@_current_line_tl }
