--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -688,7 +688,7 @@
 \@@_tmp:w {iii}  \@@_parse_digits_ii:N   { 000 ; 3 }
 \@@_tmp:w {ii}   \@@_parse_digits_i:N    { 00 ; 2 }
 \@@_tmp:w {i}    \@@_parse_digits_:N     { 0 ; 1 }
-\cs_new_nopar:Npn \@@_parse_digits_:N { ; ; 0 }
+\cs_new:Npn \@@_parse_digits_:N { ; ; 0 }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1839,7 +1839,7 @@
 %    \begin{macrocode}
 \cs_set_protected:Npn \@@_tmp:w #1 #2
   {
-    \cs_new_nopar:cpn { @@_parse_word_#1:N }
+    \cs_new:cpn { @@_parse_word_#1:N }
       { \exp_after:wN #2 \exp:w \exp_end_continue_f:w \@@_parse_infix:NN }
   }
 \@@_tmp:w { inf } \c_inf_fp
@@ -1864,7 +1864,7 @@
 %    \begin{macrocode}
 \cs_set_protected:Npn \@@_tmp:w #1 #2
   {
-    \cs_new_nopar:cpn { @@_parse_word_#1:N }
+    \cs_new:cpn { @@_parse_word_#1:N }
       {
         \@@_exp_after_f:nw { \@@_parse_infix:NN }
         \s_@@ \@@_chk:w 10 #2 ;
@@ -1890,7 +1890,7 @@
 %    \begin{macrocode}
 \tl_map_inline:nn { {em} {ex} }
   {
-    \cs_new_nopar:cpn { @@_parse_word_#1:N }
+    \cs_new:cpn { @@_parse_word_#1:N }
       {
         \exp_after:wN \@@_from_dim_test:ww
         \exp_after:wN 0 \exp_after:wN ,
@@ -1943,17 +1943,17 @@
 %   Those functions are also unary (not binary), but may receive a
 %   variable number of arguments.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \@@_parse_word_acot:N
+\cs_new:Npn \@@_parse_word_acot:N
   { \@@_parse_function:NNN \@@_acot_o:Nw \use_i:nn }
-\cs_new_nopar:Npn \@@_parse_word_acotd:N
+\cs_new:Npn \@@_parse_word_acotd:N
   { \@@_parse_function:NNN \@@_acot_o:Nw \use_ii:nn }
-\cs_new_nopar:Npn \@@_parse_word_atan:N
+\cs_new:Npn \@@_parse_word_atan:N
   { \@@_parse_function:NNN \@@_atan_o:Nw \use_i:nn }
-\cs_new_nopar:Npn \@@_parse_word_atand:N
+\cs_new:Npn \@@_parse_word_atand:N
   { \@@_parse_function:NNN \@@_atan_o:Nw \use_ii:nn }
-\cs_new_nopar:Npn \@@_parse_word_max:N
+\cs_new:Npn \@@_parse_word_max:N
   { \@@_parse_function:NNN \@@_minmax_o:Nw 2 }
-\cs_new_nopar:Npn \@@_parse_word_min:N
+\cs_new:Npn \@@_parse_word_min:N
   { \@@_parse_function:NNN \@@_minmax_o:Nw 0 }
 %    \end{macrocode}
 % \end{macro}
@@ -1969,11 +1969,11 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_parse_word_abs:N
   { \@@_parse_unary_function:nNN { set_sign } 0 }
-\cs_new_nopar:Npn \@@_parse_word_exp:N
+\cs_new:Npn \@@_parse_word_exp:N
   { \@@_parse_unary_function:nNN {exp} ? }
-\cs_new_nopar:Npn \@@_parse_word_ln:N
+\cs_new:Npn \@@_parse_word_ln:N
   { \@@_parse_unary_function:nNN {ln} ? }
-\cs_new_nopar:Npn \@@_parse_word_sqrt:N
+\cs_new:Npn \@@_parse_word_sqrt:N
   { \@@_parse_unary_function:nNN {sqrt} ? }
 %    \end{macrocode}
 % \end{macro}
@@ -2009,9 +2009,9 @@
     {cos} {cot} {csc} {sec} {sin} {tan}
   }
   {
-    \cs_new_nopar:cpn { @@_parse_word_#1:N }
+    \cs_new:cpn { @@_parse_word_#1:N }
       { \@@_parse_unary_function:nNN {#1} \use_i:nn }
-    \cs_new_nopar:cpn { @@_parse_word_#1d:N }
+    \cs_new:cpn { @@_parse_word_#1d:N }
       { \@@_parse_unary_function:nNN {#1} \use_ii:nn }
   }
 %    \end{macrocode}
@@ -2024,11 +2024,11 @@
 %     \@@_parse_word_ceil:N
 %   }
 %    \begin{macrocode}
-\cs_new_nopar:Npn \@@_parse_word_trunc:N
+\cs_new:Npn \@@_parse_word_trunc:N
   { \@@_parse_function:NNN \@@_round_o:Nw \@@_round_to_zero:NNN }
-\cs_new_nopar:Npn \@@_parse_word_floor:N
+\cs_new:Npn \@@_parse_word_floor:N
   { \@@_parse_function:NNN \@@_round_o:Nw \@@_round_to_ninf:NNN }
-\cs_new_nopar:Npn \@@_parse_word_ceil:N
+\cs_new:Npn \@@_parse_word_ceil:N
   { \@@_parse_function:NNN \@@_round_o:Nw \@@_round_to_pinf:NNN }
 %    \end{macrocode}
 % \end{macro}
@@ -2286,7 +2286,7 @@
 %    \begin{macrocode}
 \group_begin:
 %<*package>
-  \cs_set_nopar:Npn \+ { }
+  \cs_set:Npn \+ { }
 %</package>
   \char_set_catcode_other:N \&
   \char_set_catcode_letter:N \^
@@ -2648,7 +2648,7 @@
   }
 \cs_new_protected:Npn \@@_new_function:NNnnn #1#2#3#4#5
   {
-    \cs_new_nopar:Npn #1
+    \cs_new:Npn #1
       {
         \exp_after:wN \@@_function_apply:nw \exp_after:wN
           {
