--- a/l3kernel/l3fp-trig.dtx
+++ b/l3kernel/l3fp-trig.dtx
@@ -476,7 +476,7 @@
 %   control sequence name, and convert it to a token list when required:
 %   strings take up less memory than their token list representation.
 %    \begin{macrocode}
-\cs_new_nopar:Npx \@@_trig_inverse_two_pi:
+\cs_new:Npx \@@_trig_inverse_two_pi:
   {
     \exp_not:n { \exp_after:wN \use_none:n \token_to_str:N }
     \cs:w , , !
@@ -778,7 +778,7 @@
       \exp_after:wN +
     \fi:
   }
-\cs_new_nopar:Npn \@@_trig_large_auxix:Nw
+\cs_new:Npn \@@_trig_large_auxix:Nw
   {
     \exp_after:wN \@@_use_i_until_s:nw
     \exp_after:wN \@@_trig_large_auxxi:w
@@ -1053,12 +1053,12 @@
 %   ones: $\operatorname{atan}(y) = \operatorname{atan}(y, 1) = \operatorname{acot}(1, y)$ and
 %   $\operatorname{acot}(x) = \operatorname{atan}(1, x) = \operatorname{acot}(x, 1)$.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \@@_atan_o:Nw
+\cs_new:Npn \@@_atan_o:Nw
   {
     \@@_atan_dispatch_o:NNnNw
       \@@_acotii_o:Nww \@@_atanii_o:Nww { atan }
   }
-\cs_new_nopar:Npn \@@_acot_o:Nw
+\cs_new:Npn \@@_acot_o:Nw
   {
     \@@_atan_dispatch_o:NNnNw
       \@@_atanii_o:Nww \@@_acotii_o:Nww { acot }
