--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -966,8 +966,8 @@
 %   For writing the line number nicely. \cs{msg_line_context:} was set up
 %   earlier, so this is not \texttt{new}.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \msg_line_number: { \int_use:N \tex_inputlineno:D }
-\cs_gset_nopar:Npn \msg_line_context:
+\cs_new:Npn \msg_line_number: { \int_use:N \tex_inputlineno:D }
+\cs_gset:Npn \msg_line_context:
   {
     \c_@@_on_line_text_tl
     \c_space_tl
@@ -1077,7 +1077,7 @@
             \__iow_with:Nnn \tex_errorcontextlines:D \c_minus_one
               {
                 \group_begin:
-                  \cs_set_protected_nopar:Npn &
+                  \cs_set_protected:Npn &
                     {
                       \tex_errmessage:D
                         {
@@ -1463,7 +1463,7 @@
         \@@_class_chk_exist:nT {#1}
           {
             \tl_set:Nn \l_@@_current_class_tl {#1}
-            \cs_set_protected_nopar:Npx \@@_use_code:
+            \cs_set_protected:Npx \@@_use_code:
               {
                 \exp_not:n
                   {
@@ -1476,7 +1476,7 @@
       }
       { \@@_kernel_error:nnxx { kernel } { message-unknown } {#2} {#3} }
   }
-\cs_new_protected_nopar:Npn \@@_use_code: { }
+\cs_new_protected:Npn \@@_use_code: { }
 %    \end{macrocode}
 %   The first check is for a individual message redirection. If this
 %   applies then no further redirection is attempted.  Otherwise, split
@@ -1573,7 +1573,7 @@
 %   for a loop: as an initialization, we start by storing the initial
 %   class in \cs{l_@@_current_class_tl}.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \msg_redirect_class:nn
+\cs_new_protected:Npn \msg_redirect_class:nn
   { \@@_redirect:nnn { } }
 \cs_new_protected:Npn \msg_redirect_module:nnn #1
   { \@@_redirect:nnn { / #1 } }
@@ -2093,7 +2093,7 @@
 % \begin{macro}[int]{\@@_log_next:}
 %    \begin{macrocode}
 \bool_new:N \g_@@_log_next_bool
-\cs_new_protected_nopar:Npn \@@_log_next:
+\cs_new_protected:Npn \@@_log_next:
   { \bool_gset_true:N \g_@@_log_next_bool }
 %    \end{macrocode}
 % \end{macro}
@@ -2123,7 +2123,7 @@
       { \exp_not:n { \@@_show_pre:nnnnnn {#1} {#2} } {#3} {#4} {#5} {#6} }
   }
 \cs_generate_variant:Nn \@@_show_pre:nnnnnn { nnnnnV }
-\cs_new_protected_nopar:Npn \@@_show_pre_aux:n
+\cs_new_protected:Npn \@@_show_pre_aux:n
   { \bool_if:NTF \g_@@_log_next_bool { \iow_log:n } { \iow_term:n } }
 %    \end{macrocode}
 % \end{macro}
