--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -853,8 +853,8 @@
 %   updated entry is placed at the same spot as the original \meta{key}
 %   in the property list, preserving the order of entries.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \prop_put:Nnn  { \@@_put:NNnn \tl_set:Nx }
-\cs_new_protected_nopar:Npn \prop_gput:Nnn { \@@_put:NNnn \tl_gset:Nx }
+\cs_new_protected:Npn \prop_put:Nnn  { \@@_put:NNnn \tl_set:Nx }
+\cs_new_protected:Npn \prop_gput:Nnn { \@@_put:NNnn \tl_gset:Nx }
 \cs_new_protected:Npn \@@_put:NNnn #1#2#3#4
   {
     \tl_set:Nn \l_@@_internal_tl
@@ -889,9 +889,9 @@
 %   If the key is new, then the value is added, being careful to
 %   convert the key to a string using \cs{tl_to_str:n}.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \prop_put_if_new:Nnn
+\cs_new_protected:Npn \prop_put_if_new:Nnn
   { \@@_put_if_new:NNnn \tl_set:Nx }
-\cs_new_protected_nopar:Npn \prop_gput_if_new:Nnn
+\cs_new_protected:Npn \prop_gput_if_new:Nnn
   { \@@_put_if_new:NNnn \tl_gset:Nx }
 \cs_new_protected:Npn \@@_put_if_new:NNnn #1#2#3#4
   {
@@ -1101,9 +1101,9 @@
 % \begin{macro}[tested = m3prop003]{\prop_map_break:n}
 %   The break statements are based on the general \cs{__prg_map_break:Nn}.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \prop_map_break:
+\cs_new:Npn \prop_map_break:
   { \__prg_map_break:Nn \prop_map_break: { } }
-\cs_new_nopar:Npn \prop_map_break:n
+\cs_new:Npn \prop_map_break:n
   { \__prg_map_break:Nn \prop_map_break: }
 %    \end{macrocode}
 % \end{macro}
