--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1009,7 +1009,7 @@
 %   brace group before the string in that case: that brace group also
 %   covers the case where the \meta{index} is zero.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \str_item:Nn { \exp_args:No \str_item:nn }
+\cs_new:Npn \str_item:Nn { \exp_args:No \str_item:nn }
 \cs_generate_variant:Nn \str_item:Nn { c }
 \cs_new:Npn \str_item:nn #1#2
   {
@@ -1105,7 +1105,7 @@
 %   Afterwards, skip characters, then keep some more, and finally drop
 %   the end of the string.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \str_range:Nnn { \exp_args:No \str_range:nnn }
+\cs_new:Npn \str_range:Nnn { \exp_args:No \str_range:nnn }
 \cs_generate_variant:Nn \str_range:Nnn { c }
 \cs_new:Npn \str_range:nnn #1#2#3
   {
@@ -1226,7 +1226,7 @@
 %   \meta{number} is added to the sum of $9$ that precedes, to adjust
 %   the result.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \str_count_spaces:N
+\cs_new:Npn \str_count_spaces:N
   { \exp_args:No \str_count_spaces:n }
 \cs_generate_variant:Nn \str_count_spaces:N { c }
 \cs_new:Npn \str_count_spaces:n #1
@@ -1268,7 +1268,7 @@
 %   \cs{str_count_ignore_spaces:n} but expects its argument to already
 %   be a string or a string with spaces escaped.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \str_count:N { \exp_args:No \str_count:n }
+\cs_new:Npn \str_count:N { \exp_args:No \str_count:n }
 \cs_generate_variant:Nn \str_count:N { c }
 \cs_new:Npn \str_count:n #1
   {
@@ -1331,7 +1331,7 @@
 %   gives an empty result after passing through
 %   \cs{use_i_delimit_by_q_stop:nw}.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \str_head:N { \exp_args:No \str_head:n }
+\cs_new:Npn \str_head:N { \exp_args:No \str_head:n }
 \cs_generate_variant:Nn \str_head:N { c }
 \cs_set:Npn \str_head:n #1
   {
@@ -1368,7 +1368,7 @@
 %   One can check that an empty (or blank) string yields an empty
 %   tail.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \str_tail:N { \exp_args:No \str_tail:n }
+\cs_new:Npn \str_tail:N { \exp_args:No \str_tail:n }
 \cs_generate_variant:Nn \str_tail:N { c }
 \cs_set:Npn \str_tail:n #1
   {
