--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -666,7 +666,7 @@
   {
     \bool_if:NF \l__kernel_expl_bool
       {
-        \cs_set_protected_nopar:Npx \ExplSyntaxOff
+        \cs_set_protected:Npx \ExplSyntaxOff
           {
             \char_set_catcode:nn { 9 }   { \char_value_catcode:n { 9 } }
             \char_set_catcode:nn { 32 }  { \char_value_catcode:n { 32 } }
@@ -680,7 +680,7 @@
             \tex_endlinechar:D =
               \tex_the:D \tex_endlinechar:D \scan_stop:
             \bool_set_false:N \l__kernel_expl_bool
-            \cs_set_protected_nopar:Npn \ExplSyntaxOff { }
+            \cs_set_protected:Npn \ExplSyntaxOff { }
           }
       }
     \char_set_catcode_ignore:n           { 9 }   % tab
