--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3box.dtx Copyright (C) 2005-2015 The LaTeX3 Project
+%% File: l3box.dtx Copyright (C) 2005-2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -932,7 +932,7 @@
 \cs_new_protected:Npn \box_show:N #1
   { \box_show:Nnn #1 \c_max_int \c_max_int }
 \cs_generate_variant:Nn \box_show:N { c }
-\cs_new_protected_nopar:Npn \box_show:Nnn
+\cs_new_protected:Npn \box_show:Nnn
   { \@@_show:NNnn \c_one }
 \cs_generate_variant:Nn \box_show:Nnn { c }
 %    \end{macrocode}
