--- a/l3kernel/l3fp-extended.dtx
+++ b/l3kernel/l3fp-extended.dtx
@@ -349,8 +349,8 @@
 %   \meta{continuation} (|#8|, then |#7|) from the end of the argument
 %   list to its start.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \@@_fixed_add:wwn { \@@_fixed_add:Nnnnnwnn + }
-\cs_new_nopar:Npn \@@_fixed_sub:wwn { \@@_fixed_add:Nnnnnwnn - }
+\cs_new:Npn \@@_fixed_add:wwn { \@@_fixed_add:Nnnnnwnn + }
+\cs_new:Npn \@@_fixed_sub:wwn { \@@_fixed_add:Nnnnnwnn - }
 \cs_new:Npn \@@_fixed_add:Nnnnnwnn #1 #2#3#4#5 #6; #7#8
   {
     \exp_after:wN \@@_fixed_add_after:NNNNNwn
